# razrabot-test

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
project/: application.py  commands.py  database.py  settings.py
project/utils/: modules.py  settings.py  system.py  testing.py  validation.py
tasks/: crud.py  models.py  router.py  serializers.py  tests.py
